--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,7 @@
 
             android:layout_marginBottom="8dp"
             android:background="@drawable/btn_orange"
-            android:text="SignUp"
+            android:text="Login"
             android:textColor="#ffffff"
             android:textSize="24sp"
             android:textStyle="bold" />
