--- a/app/src/main/res/layout/fragment_raiseticket.xml
+++ b/app/src/main/res/layout/fragment_raiseticket.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_dark">
+    android:background="@android:color/white">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Settings Fragment"
+        android:text="Raise Tickets Fragment"
         android:textSize="30sp" />
+
 
 </RelativeLayout>
